@@ -19,8 +19,7 @@ h4. RedCloth Links
 
 "Instiki":http://www.instiki.org is the greatest Wiki ever!  Uses RedCloth for its markup!
 
-"Hobix":http://hobix.com is a lovely little blogging package which uses RedCloth for
-blog entries.
+"Hobix":http://hobix.com is a lovely little blogging package which uses RedCloth for blog entries.
 
 </div>
 
