@@ -1,7 +1,12 @@
 --- %YAML:1.0
 - version: 2.0.8
-  date: 2004-05-17
+  date: 2004-05-22
   changes:
+    - First scan of the glyphs() method only scans for pre|notextile|code, the
+      deeper passes scan for all HTML.  Now inlines work around HTML tags!
+      (What a pain!)
+    - Moved tables and blocks into glyphs to keep them shielded from the parser
+      if they are in <pre> tags.
     - Patch by Denis Mertz to speed up RedCloth by compiling the various RegExps
       only once.  Thanks, David!
 
